# MyECS

./: .gitmodules  CMakeLists.txt  README.md  compare.md  comparison.md  todo.md
cmake/: InitMyCMake.cmake
config/: Config.cmake.in
doc/: API.md  changelog.md  comparison.md  todo.md
include/MyECS/: AccessTypeID.h  AccessTypeID.hpp  Archetype.h  Archetype.hxx  ArchetypeFilter.h  ArchetypeFilter.hpp  ArchetypeManager.hxx  ArchetypeMngr.h  ChangeFilter.hpp  Chunk.h  Chunk.hpp  ChunkView.h  ChunkView.hpp  CmptLocator.h  CmptLocator.hpp  CmptPtr.h  CmptPtr.hpp  CmptRegister.h  CmptRegistrar.h  CmptTag.h  CmptTag.hpp  CmptTraits.hpp  CmptType.h  CmptsView.h  CmptsView.hpp  CommandBuffer.hpp  Component.hxx  Entity.h  Entity.hpp  Entity.hxx  EntityFilter.h  EntityLocator.h  EntityMngr.h  EntityMngr.hpp  EntityQuery.h  EntityQuery.hpp  IListener.h  IListener.hpp  MyECS.hpp  Pool.h  (+26 more)
include/MyECS/cmpt/: Node.h  Node.hxx
include/MyECS/core/: Archetype.h  Archetype.hxx  ArchetypeManager.hxx  ArchetypeMngr.h  Chunk.h  Chunk.hxx  Entity.h  Entity.hxx  EntityBase.h  EntityBase.hxx  EntityData.h  EntityData.hxx  EntityManager.hxx  EntityMngr.h  Pool.h  Pool.hxx  System.h  System.hxx  World.h  World.hxx  pool.h
include/MyECS/detail/: Archetype.h  Archetype.hxx  Archetype.inl  ArchetypeCmptTraits.h  ArchetypeCmptTraits.inl  ArchetypeFilter.inl  ArchetypeManager.hxx  ArchetypeManager.inl  ArchetypeMngr.h  ArchetypeMngr.inl  Chunk.h  Chunk.hxx  Chunk.inl  ChunkView.inl  CmptIDSet.h  CmptLifecycleMngr.h  CmptMngr.h  CmptRegister.inl  CmptRegistrar.inl  CmptSysMngr.h  CmptSysMngr.inl  CmptTag.inl  CmptType.inl  CmptTypeSet.h  CmptTypeSet.inl  CmptsLocator.inl  ComponentManager.hxx  Entity.inl  EntityBase.h  EntityBase.hxx  EntityData.h  EntityFilter.inl  EntityLocator.h  EntityLocator.inl  EntityMngr.h  EntityMngr.inl  EntityQuery.inl  Job.h  Pool.h  Pool.hxx  (+25 more)
include/MyECS/details/: AccessTypeID.inl  Archetype.h  Archetype.inl  ArchetypeCmptTraits.h  ArchetypeCmptTraits.inl  Chunk.h  ChunkView.inl  CmptTag.inl  CmptTraits.inl  CmptsLocator.inl  EntityMngr.inl  EntityQuery.inl  Job.h  Job.hpp  RTDCmptTraits.inl  (+13 more)
src/EMPTY/: CMakeLists.txt
src/HeadFiles/: CMakeLists.txt  EMPTY.cpp
src/cmpt/: CMakeLists.txt  Node.cpp  Node.cxx
src/core/: Archetype.cpp  Archetype.cxx  Archetype.h  Archetype.hpp  ArchetypeCmptTraits.cpp  ArchetypeCmptTraits.h  ArchetypeCmptTraits.hpp  ArchetypeFilter.cpp  ArchetypeManager.cxx  ArchetypeMngr.cpp  CMakeLists.txt  Chunk.cpp  Chunk.cxx  Chunk.h  Chunk.hpp  ChunkView.cpp  CmptLocator.cpp  CmptSysMngr.cpp  CmptTraits.cpp  CmptsView.cpp  Entity.cpp  EntityFilter.cpp  EntityLocator.cpp  EntityMngr.cpp  EntityQuery.cpp  RTDCmptTraits.cpp  RTDCmptViewer.cpp  RTDCmptsView.cpp  Schedule.cpp  SingletonLocator.cpp  SingletonsView.cpp  SysFuncGraph.cpp  SysFuncGraph.h  SysFuncGraph.hpp  SystemFunc.cpp  SystemManager.cxx  SystemMngr.cpp  SystemSchdule.cpp  SystemTraits.cpp  World.cpp  (+1 more)
(+74 files in other folders)
