CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MyECS VERSION 0.9.0 LANGUAGES CXX)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(FETCHCONTENT)

MESSAGE(STATUS "Looking for: MyCMake 0.5.3")
FIND_PACKAGE(MyCMake 0.5.3 QUIET)
IF (NOT MyCMake_FOUND)
    SET(ADDRESS "https://github.com/shimakaze09/MyCMake.git")
    MESSAGE(STATUS "MyCMake 0.5.3 not found\n")
    MESSAGE(STATUS "Fetching from ${ADDRESS} with tag 0.5.3")
    FETCHCONTENT_DECLARE(
            MyCMake
            GIT_REPOSITORY ${ADDRESS}
            GIT_TAG "0.5.3"
    )
    FETCHCONTENT_MAKEAVAILABLE(MyCMake)
    MESSAGE(STATUS "MyCMake 0.5.3 built")
ENDIF ()

INIT_PROJECT()

ADD_DEP(MyContainer 0.0.4)
ADD_DEP(MyTemplate 0.4.3)

ADD_SUB_DIRS_REC(include)
ADD_SUB_DIRS_REC(src)

EXPORT_TARGETS(DIRECTORIES "include")